# elec-proxy-system

./: README.deploy.md  README.md  docker-compose.yml
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  db_region_guard.py  dependencies.py  exceptions.py  logging.py  main.py
backend/app/alembic/: env.py
backend/app/core/: constants.py  scheduler.py  security.py
backend/app/crud/: __init__.py  base.py
backend/app/models/: __init__.py  agent.py  base.py  commission.py  consumption.py  customer_account.py  import_task.py  inquiry.py  price.py  profit.py  usage_curve.py
backend/app/routers/: agent.py  auth.py  commission.py  consumption.py  customer.py  health.py  import_task.py  inquiry.py  price.py  profit.py  scheduled_jobs.py  usage_curve_template.py
backend/app/schemas/: __init__.py  agent.py  auth.py  commission.py  common.py  consumption.py  customer.py  import_task.py  inquiry.py  price.py  profit.py  usage_curve_template.py
backend/app/services/: __init__.py  agent.py  auth.py  commission.py  consumption.py  conversion.py  customer.py  excel_utils.py  import_task.py  inquiry.py  price.py  pricing_engine.py  profit.py  scheduled_jobs.py  usage_curve_template.py
backend/docs/: integration-test-report.md
backend/migrations/: 001_init.sql
backend/scripts/: integration_test.py  start.sh
backend/tests/: conftest.py  test_consumption.py  test_health.py  test_inquiry.py  test_integration.py  test_scheduled_jobs.py
(+71 files in other folders)
