[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tongye-backend"
version = "0.1.0"
description = "桐叶售电代理系统后端 (FastAPI + SQLAlchemy 2.0 + PostgreSQL)"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Tongye Team" }]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "apscheduler>=3.10.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
